second commit; functionality: incomplete

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
           <td onclick="inputNumber(7)"><b>7</b></td>
           <td onclick="inputNumber(8)"><b>8</b></td>
           <td onclick="inputNumber(9)"><b>9</b></td>
-          <td onclick="inputNumber('s/')"><b>/</b></td>
+          <td onclick="inputSymbol('/')"><b>/</b></td>
         </tr>
         <tr>
           <td onclick="inputNumber(4)"><b>4</b></td>
           <td onclick="inputNumber(5)"><b>5</b></td>
           <td onclick="inputNumber(6)"><b>6</b></td>
-          <td onclick="inputNumber('s*')"><b>*</b></td>
+          <td onclick="inputSymbol('*')"><b>*</b></td>
         </tr>
         <tr>
           <td onclick="inputNumber(1)"><b>1</b></td>
           <td onclick="inputNumber(2)"><b>2</b></td>
           <td onclick="inputNumber(3)"><b>3</b></td>
-          <td onclick="inputNumber('s-')"><b>-</b></td>
+          <td onclick="inputSymbol('-')"><b>-</b></td>
         </tr>
         <tr>
           <td id="a2" onclick="inputNumber(0)"><b>0</b></td>
-          <td onclick="inputNumber('s=')"><b>=</b></td>
-          <td onclick="inputNumber('s+')"><b>+</b></td>
+          <td onclick="equality()"><b>=</b></td>
+          <td onclick="inputSymbol('+')"><b>+</b></td>
         </tr>
       </table>
     </div>
