fixed operations: optimization

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </tr>
         <tr>
           <td id="a2" onclick="inputNumber(0)"><b>0</b></td>
-          <td onclick="equality()"><b>=</b></td>
+          <td onclick="inputSymbol('=')"><b>=</b></td>
           <td onclick="inputSymbol('+')"><b>+</b></td>
         </tr>
       </table>
