add delete button symbol

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <table class="textDeleteTable">
         <tr>
           <td class='delete' onclick="outputDelete ('CE')"><b>CE</b></td>
-          <td class='delete' onclick="outputDelete('C')"><b>C</b></td>
+          <td class='delete' id = '' onclick="outputDelete('C')"><b>&#8592;</b></td>
         </tr>
       </table>
       <table class="buttonTable">
